Continue redaction of CELL

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -66,6 +66,14 @@
   volume = {29}
 }
 
+@phdthesis{dato2021apprentissage,
+  title = {Apprentissage Permanent Par Feedback Endog\`ene, Application \`a Un Syst\`eme Robotique},
+  author = {Dato, Bruno},
+  year = 2021,
+  school = {Toulouse 3},
+  file = {C:\Users\uif72473\Zotero\storage\499H5V38\Dato - 2021 - Apprentissage permanent par feedback endogène, app.pdf}
+}
+
 @incollection{dietterichEnsembleMethodsMachine2000,
   title = {Ensemble {{Methods}} in {{Machine Learning}}},
   booktitle = {{{SpringerLink}}},
