adding limitations and continuing kCELL

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -162,6 +162,16 @@
   publisher = {IEEE}
 }
 
+@article{lowe1988multivariable,
+  title = {Multivariable Functional Interpolation and Adaptive Networks},
+  author = {Lowe, David and Broomhead, D},
+  year = 1988,
+  journal = {Complex systems},
+  volume = {2},
+  number = {3},
+  pages = {321--355}
+}
+
 @inproceedings{ma2017informative,
   title = {Informative Planning and Online Learning with Sparse Gaussian Processes},
   booktitle = {2017 {{IEEE}} International Conference on Robotics and Automation ({{ICRA}})},
@@ -236,6 +246,17 @@
   publisher = {Wiley Online Library}
 }
 
+@article{seeger2004gaussian,
+  title = {Gaussian Processes for Machine Learning},
+  author = {Seeger, Matthias},
+  year = 2004,
+  journal = {International journal of neural systems},
+  volume = {14},
+  number = {02},
+  pages = {69--106},
+  publisher = {World Scientific}
+}
+
 @article{SHAMSHIRBAND20132105,
   title = {An Appraisal and Design of a Multi-Agent System Based Cooperative Wireless Intrusion Detection Computational Intelligence Technique},
   author = {Shamshirband, Shahaboddin and Anuar, Nor Badrul and Kiah, Miss Laiha Mat and Patel, Ahmed},
@@ -284,6 +305,18 @@
   number = {2},
   pages = {258--272},
   publisher = {IEEE}
+}
+
+@article{yukselTwentyYearsMixture2012,
+  title = {Twenty Years of Mixture of Experts},
+  author = {Yuksel, Seniha Esen and Wilson, Joseph N. and Gader, Paul D.},
+  year = 2012,
+  journal = {IEEE transactions on neural networks and learning systems},
+  volume = {23},
+  number = {8},
+  pages = {1177--1193},
+  publisher = {IEEE},
+  isbn = {2162-237X}
 }
 
 @article{zhang2023sequential,
