reworking oCELL and finishing system definition of kCELL

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -288,6 +288,17 @@
   publisher = {PMLR}
 }
 
+@article{welford1962note,
+  title = {Note on a Method for Calculating Corrected Sums of Squares and Products},
+  author = {Welford, Barry Payne},
+  year = 1962,
+  journal = {Technometrics},
+  volume = {4},
+  number = {3},
+  pages = {419--420},
+  publisher = {Taylor \& Francis}
+}
+
 @article{williams1995gaussian,
   title = {Gaussian Processes for Regression},
   author = {Williams, Christopher and Rasmussen, Carl},
