adding non stationary experiment interpretations and plots for kCELL

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -28,6 +28,15 @@
   publisher = {IEEE}
 }
 
+@inproceedings{bifet2009adaptive,
+  title = {Adaptive Learning from Evolving Data Streams},
+  booktitle = {International Symposium on Intelligent Data Analysis},
+  author = {Bifet, Albert and Gavalda, Ricard},
+  year = 2009,
+  pages = {249--260},
+  publisher = {Springer}
+}
+
 @incollection{boesSelfAdaptiveContextLearning2015,
   title = {The {{Self-Adaptive Context Learning Pattern}}: {{Overview}} and {{Proposal}}},
   booktitle = {{{SpringerLink}}},
@@ -133,6 +142,15 @@
   publisher = {IEEE}
 }
 
+@article{haarnoja2018soft,
+  title = {Soft Actor-Critic Algorithms and Applications},
+  author = {Haarnoja, Tuomas and Zhou, Aurick and Hartikainen, Kristian and Tucker, George and Ha, Sehoon and Tan, Jie and Kumar, Vikash and Zhu, Henry and Gupta, Abhishek and Abbeel, Pieter and others},
+  year = 2018,
+  journal = {arXiv preprint arXiv:1812.05905},
+  eprint = {1812.05905},
+  archiveprefix = {arXiv}
+}
+
 @incollection{jolliffe2011principal,
   title = {Principal Component Analysis},
   booktitle = {International Encyclopedia of Statistical Science},
@@ -190,6 +208,15 @@
   number = {18},
   pages = {8785--8812},
   publisher = {Wiley Online Library}
+}
+
+@article{mcinnes2018umap,
+  title = {Umap: {{Uniform}} Manifold Approximation and Projection for Dimension Reduction},
+  author = {McInnes, Leland and Healy, John and Melville, James},
+  year = 2018,
+  journal = {arXiv preprint arXiv:1802.03426},
+  eprint = {1802.03426},
+  archiveprefix = {arXiv}
 }
 
 @article{meier2014incremental,
@@ -279,6 +306,16 @@
   volume = {18}
 }
 
+@article{stable-baselines3,
+  title = {Stable-Baselines3: {{Reliable}} Reinforcement Learning Implementations},
+  author = {Raffin, Antonin and Hill, Ashley and Gleave, Adam and Kanervisto, Anssi and Ernestus, Maximilian and Dormann, Noah},
+  year = 2021,
+  journal = {Journal of Machine Learning Research},
+  volume = {22},
+  number = {268},
+  pages = {1--8}
+}
+
 @inproceedings{titsias2009variational,
   title = {Variational Learning of Inducing Variables in Sparse {{Gaussian}} Processes},
   booktitle = {Artificial Intelligence and Statistics},
@@ -286,6 +323,24 @@
   year = 2009,
   pages = {567--574},
   publisher = {PMLR}
+}
+
+@inproceedings{todorov2012mujoco,
+  title = {Mujoco: {{A}} Physics Engine for Model-Based Control},
+  booktitle = {2012 {{IEEE}}/{{RSJ}} International Conference on Intelligent Robots and Systems},
+  author = {Todorov, Emanuel and Erez, Tom and Tassa, Yuval},
+  year = 2012,
+  pages = {5026--5033},
+  publisher = {IEEE}
+}
+
+@article{towers2024gymnasium,
+  title = {Gymnasium: A Standard Interface for Reinforcement Learning Environments},
+  author = {Towers, Mark and Kwiatkowski, Ariel and Terry, Jordan and Balis, John U and De Cola, Gianluca and Deleu, Tristan and Goul{\~a}o, Manuel and Kallinteris, Andreas and Krimmel, Markus and KG, Arjun and others},
+  year = 2024,
+  journal = {arXiv preprint arXiv:2407.17032},
+  eprint = {2407.17032},
+  archiveprefix = {arXiv}
 }
 
 @article{welford1962note,
